# triage

./: .gitignore  pyproject.toml  task.md
config/normalizers/: README.md  crowdstrike.yaml  edr.yaml  grafana.yaml  guardduty.yaml  orca.yaml  prisma.yaml  sentinelone.yaml  wiz.yaml
docs/superpowers/plans/: 2026-06-29-foundation-common.md
sample_alerts/: crowdstrike.json  edr.json  generic.json  grafana.json  guardduty.json  orca.json  prisma.json  sentinelone.json  wiz.json
services/common/enrichment/: host_catalog.py
services/common/interfaces/: document_store.py  llm_client.py  message_bus.py  secret_provider.py  telemetry_client.py
services/common/models/: access_grant.py  duplicate_match.py  normalized_alert.py
services/common/normalizers/: declarative.py  edr.py  generic.py  grafana.py  loader.py  severity.py  spec.py
services/common/plugins/: base_destination.py  base_normalizer.py  deduplicator.py  registries.py
tests/common/enrichment/: test_host_catalog.py
tests/common/interfaces/: test_interfaces.py
tests/common/models/: test_access_grant.py  test_duplicate_match.py  test_normalized_alert.py
tests/common/normalizers/: test_declarative.py  test_default_registration.py  test_edr.py  test_generic.py  test_grafana.py  test_loader.py  test_severity.py  test_spec.py  test_vendor_specs.py
tests/common/plugins/: test_base_destination.py  test_base_normalizer.py  test_deduplicator.py  test_registries.py
