[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-platform"
version = "0.1.0"
description = "Vendor-neutral, open-source SOC alert automation platform"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["services"]
testpaths = ["tests"]
